--- a/templates/Events.html
+++ b/templates/Events.html
@@ -23,16 +23,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/Events.html">Events <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/dashboard_event">Events <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/Volunteers.html">Volunteers <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/volunteers">Volunteers <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/Staff.html">Staff <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/staff">Staff <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/Partners.html">Partners <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/partners">Partners <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -44,7 +44,7 @@
     
     <hr>
     <h3 style="margin-top: 8px; margin-left: 8px">Your Calender</h3>
-    <iframe src="calender/demos/agenda-views.html" style="height: 800px; width: 90%; margin: 5%"></iframe>
+    <iframe src="calender/demos/agenda-views" style="height: 800px; width: 90%; margin: 5%"></iframe>
     <hr>
     
     <h3 style="margin-top: 8px; margin-left: 8px">Events</h3>
